--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d examples/dist",
     "publish-demo": "npm run build && npm run deploy"
   },
+  "keywords": ["resize","columns","react js","react","resizable column","resize column"],
   "author": "ktmcodelabs",
   "license": "ISC",
   "peerDependencies": {
